Add price and editt index + base + add terms(maybe should edit)

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,30 @@
        animation:rubberBand;
        animation-duration: 2s
    }
+   strong{
+           -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    box-sizing: border-box;
+    font-weight: bolder;
+    display: block;
+    border: 2px solid #0d8616;
+    color: #0d8616;
+    width: 53px;
+    height: 53px;
+    line-height: 46px;
+    text-align: center;
+    border-radius: 100px;
+    font-size: 20px;
+    margin-bottom: 0;
+   }
     </style>
 
-    <div class="px-5 py-5 text-center repeat_bg" style="padding:200px">
+    <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom: ;:100px">
         <h2 class="col-lg-5 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
         <div class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto">
             <p class="lead mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</p>
@@ -39,8 +60,34 @@
     </div>
 
     <div class="mx-3 my-3 row">
-    <div class="col-5 bg-dark text-light" style="border-radius: 24px">
-        <h5>Как это работает?</h5>
+    <div class="col-8" style="border-radius: 10px; border: #b9b9b9 3px solid">
+        <h5 class="my-3">Как это работает?</h5>
+        <div class="mt-5">
+            <div class="d-flex">
+                <p class="m-2">
+                    <strong>1</strong>
+                </p>
+                <p class="p-0 m-2">Клиент регистрируется, оставляет заявку на сайте.<br>В случае необходимости мы уточняем детали по заказу.</p>
+            </div>
+             <div class="d-flex">
+                <p class="m-2">
+                    <strong>2</strong>
+                </p>
+                <p class="p-0 m-2">Вам понадобится устанавить на свой компьютер программу <a href="https://www.flexihub.com/download.html">FlexiHub</a><br>с оффициального сайта.</p>
+            </div>
+             <div class="d-flex">
+                <p class="m-2">
+                    <strong>3</strong>
+                </p>
+                <p class="p-0 m-2">Далее понадобися подключить телефон к компьютеру и <br>в скаченой программе ввести спец.код.</p>
+            </div>
+            <div class="d-flex">
+                <p class="m-2">
+                    <strong>4</strong>
+                </p>
+                <p class="p-0 m-2">Теперь же остается только дождаться когда мастер закончит работу<br>и уведомит о ее завершении.</p>
+            </div>
+        </div>
 
     </div>
     </div>
