--- a/templates/base.html
+++ b/templates/base.html
@@ -136,6 +136,7 @@
             <a href="https://t.me/joinchat/L51FVHV8IxY0YTcy" style="color: white" class="text-decoration-none mx-3 h5">Telegram:<br><i class="bi bi-telegram" style="font-size: 2rem;"></i></a>
             <a href="https://api.whatsapp.com/resolve/?deeplink=%2F%253Cnumber%253E" style="color: white" class="text-decoration-none mx-3 h5">WhatsApp:<br><i class="bi bi-whatsapp" style="font-size: 2rem;"></i></a>
             <a href="tel:+380985554433" style="color: white" class="text-decoration-none mx-3 h5">Номер телефона:<br><p class="my-2" style="color: aqua">+79xx-xxx-xxxx</p></a>
+            <a href='{{ url_for('terms') }}' style="color: white" class="text-decoration-none mx-3 h5">Пользовательское соглашение<br><i class="bi bi-journal-text" style="font-size: 2rem"></i></a>
         </div>
     </div>
 
