--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,10 @@
    }
     </style>
 
-    <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom: ;:100px">
+    <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom:100px">
         <h2 class="col-lg-5 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
         <div class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto">
-            <p class="lead mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</p>
+            <h3 class="mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</h3>
             <a href="#" class="animate btn btn-success btn-lg my-2 px-4 gap-3">Разблокировать</a>
             <a href="#"  class="animate btn btn-outline-secondary my-2 btn-lg px-4">Поддержка</a>
              <div class="repeat_bg2 hidden"></div>
@@ -61,8 +61,8 @@
 
     <div class="mx-3 my-3 row">
     <div class="col-8" style="border-radius: 10px; border: #b9b9b9 3px solid">
-        <h5 class="my-3">Как это работает?</h5>
-        <div class="mt-5">
+        <h5 class="my-4 mx-2">Как это работает?</h5>
+        <div class="mt-3">
             <div class="d-flex">
                 <p class="m-2">
                     <strong>1</strong>
@@ -85,7 +85,7 @@
                 <p class="m-2">
                     <strong>4</strong>
                 </p>
-                <p class="p-0 m-2">Теперь же остается только дождаться когда мастер закончит работу<br>и уведомит о ее завершении.</p>
+                <p class="p-0 m-2 my-3">Теперь же остается только дождаться когда мастер закончит работу<br>и уведомит о ее завершении.</p>
             </div>
         </div>
 
