--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         animation-duration: 1s
                     }
                 </style>
-                <a href="" class="logoanim d-flex align-items-center text-decoration-none navbar-brand mb-4 mx-3">
+                <a href="/" class="logoanim d-flex align-items-center text-decoration-none navbar-brand mb-4 mx-3">
                     <img class="p-2 px-3 shadow-lg" style="background: black;border-radius:20px" src="/static/logo_im/logo.png" width="150px" alt="False">
                 </a>
             {% endblock %}
@@ -75,8 +75,17 @@
                         animation:rubberBand;
                         animation-duration: 2s
                     }
+                    .active_button:active{
+                        display: inline-block;
+                        animation:rubberBand;
+                        animation-duration: 2s;
+                        color: #00df7f;
+                    }
+                    .active_button{
+                        color: darkgray;
+                    }
                 </style>
-                <ul class="navbar navbar-dark bg-dark navbar-right px-3 mb-4 text-OpenSans">
+                <ul class="navbar navbar-dark d-none d-md-flex bg-dark navbar-right px-3 mb-4 text-OpenSans">
                     <li class="nav-item"><a class="focusbtn me-3 py-2 text-decoration-none px-2" href="{{ url_for('index') }}">Главное</a></li>
                     <li class="nav-item"><a class="focusbtn me-3 py-2 text-decoration-none px-2" href="{{ url_for('price') }}">Цены</a></li>
                     <li class="nav-item"><a class="focusbtn me-3 py-2 text-decoration-none px-2" href="about">О нас</a></li>
@@ -100,7 +109,41 @@
                     </div>
                     {% endif %}
                     {% endif %}
-
+                </ul>
+                <ul class="navbar navbar-dark d-flex d-md-none bg-dark navbar-right px-3 mb-4 text-OpenSans">
+                    <a class="text-decoration-none d-flex focusbtn" style="color: #b9b9b9;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i style="font-size: 2rem" class="bi bi-menu-button-wide"></i><h5 class="mx-2 my-auto">Меню</h5></a>
+                    <div class="offcanvas offcanvas-end" style="background:rgba(0,0,0,0.70);" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasRightLabel" class="text-light me-3 px-2 h1">Меню</h5>
+                            <button type="button" class="btn-close text-reset bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <li class="nav-item my-4 h2"><a class="active_button me-3 py-2 text-decoration-none px-2" href="{{ url_for('index') }}">Главное</a></li>
+                            <li class="nav-item my-4 h2"><a class="active_button me-3 py-2 text-decoration-none px-2" href="{{ url_for('price') }}">Цены</a></li>
+                            <li class="nav-item my-4 h2"><a class="active_button me-3 py-2 text-decoration-none px-2" href="about">О нас</a></li>
+                            {% if not current_user.is_authenticated %}
+                                <li class="nav-item my-4 h2"><a class="active_button me-3 py-2 text-decoration-none px-2" href="{{ url_for("security.login") }}">Войти</a></li>
+                            {% else %}
+                                {% if current_user.is_authenticated %}
+                                    <div class="dropdown my-4 h2">
+                                        <a href="#" class="active_button text-decoration-none dropdown-toggle" role="button" style="box-shadow: none" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="bi bi-person-circle" style="font-size: 1.5rem"></i>
+                                            {% if current_user.first_name -%}
+                                                {{ current_user.first_name }}
+                                            {% else -%}
+                                                {{ current_user.email }}
+                                            {%- endif %}
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu bg-dark dropdown-menu-start" aria-labelledby="dropdownMenuButton">
+                                            <li class="bg-dark h3"><a class="dropdown-item focusbtn" href="{{ url_for('userinfo') }}">Профиль</a></li>
+                                            <li class="bg-dark h3"><a class="dropdown-item focusbtn" href="{{ url_for('security.logout') }}">Выйти</a></li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                    </div>
                 </ul>
             {% endblock %}
         </nav>
@@ -136,7 +179,7 @@
             <a href="https://t.me/joinchat/L51FVHV8IxY0YTcy" style="color: white" class="text-decoration-none mx-3 h5">Telegram:<br><i class="bi bi-telegram" style="font-size: 2rem;"></i></a>
             <a href="https://api.whatsapp.com/resolve/?deeplink=%2F%253Cnumber%253E" style="color: white" class="text-decoration-none mx-3 h5">WhatsApp:<br><i class="bi bi-whatsapp" style="font-size: 2rem;"></i></a>
             <a href="tel:+380985554433" style="color: white" class="text-decoration-none mx-3 h5">Номер телефона:<br><p class="my-2" style="color: aqua">+79xx-xxx-xxxx</p></a>
-            <a href='{{ url_for('terms') }}' style="color: white" class="text-decoration-none mx-3 h5">Пользовательское соглашение<br><i class="bi bi-journal-text" style="font-size: 2rem"></i></a>
+            <a href='{{ url_for('terms') }}' style="color: white" class="text-decoration-none mx-3 h5">Пользовательское соглашение:<br><i class="bi bi-journal-text" style="font-size: 2rem"></i></a>
         </div>
     </div>
 
