--- a/templates/index.html
+++ b/templates/index.html
@@ -47,21 +47,31 @@
     font-size: 20px;
     margin-bottom: 0;
    }
+   .icon-block--style-2-v1 .block-icon {
+    display: inline-block;
+    width: 74px;
+    height: 74px;
+    line-height: 74px;
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 2rem;
+    border-radius: 100px;
+    }
     </style>
 
     <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom:100px">
         <h2 class="col-lg-5 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
         <div class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto">
             <h3 class="mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</h3>
-            <a href="#" class="animate btn btn-success btn-lg my-2 px-4 gap-3">Разблокировать</a>
-            <a href="#"  class="animate btn btn-outline-secondary my-2 btn-lg px-4">Поддержка</a>
+            <a href="#" class="animate btn btn-success btn-lg my-2 mx-1 px-4 gap-3" style="background: #00df7f; text-shadow:2px 2px 7px #949494; border: none">Разблокировать</a>
+            <a href="#"  class="animate btn btn-outline-secondary my-2 mx-1 btn-lg px-4">Поддержка</a>
              <div class="repeat_bg2 hidden"></div>
         </div>
     </div>
 
-    <div class="mx-3 my-3 row">
-    <div class="col-8" style="border-radius: 10px; border: #b9b9b9 3px solid">
-        <h5 class="my-4 mx-2">Как это работает?</h5>
+    <div class="mx-3 my-3 row" style="display: none">
+    <div class="col-lg-6 col-12" style="border-radius: 10px; border: #b9b9b9 3px solid">
+        <h5 class="my-4  mx-2">Как это работает?</h5>
         <div class="mt-3">
             <div class="d-flex">
                 <p class="m-2">
@@ -88,8 +98,57 @@
                 <p class="p-0 m-2 my-3">Теперь же остается только дождаться когда мастер закончит работу<br>и уведомит о ее завершении.</p>
             </div>
         </div>
+    </div>
+    </div>
 
-    </div>
-    </div>
+<div class="container mt-5 mx-auto">
+        <div>
+        <div class="row mt-3">
+        <div class="col-lg-4 mt-4">
+            <div class="icon-block icon-block--style-2-v1 text-center">
+                <div class="block-icon" style="background: #00df7f; color: white">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit; text-shadow:2px 2px 5px #212529 ">
+                            1
+                        </font>
+                    </font>
+                </div>
+            </div>
+            <div class="row text-center" style="font-family:'Open Sans', sans-serif;"><h4>Предоставьте информацию о вашем устройстве</h4></div>
+            <div class="row text-center mt-2 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">Заполните форму заявки на сайте.
+                Выберите модель телефона который хотите разблокировать. Установите с официального сайта утилиту <a
+                        href="https://www.flexihub.com/download.html">FlexiHub</a> для компютера. А так же в соответсвии с выбранной моделью произведите оплату услуги.</p></div>
+        </div>
+        <div class="col-lg-4 mt-4">
+            <div class="icon-block icon-block--style-2-v1 text-center">
+                <div class="block-icon" style="background: #00df7f; color: white">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit; text-shadow:2px 2px 5px #212529 ">
+                            2
+                        </font>
+                    </font>
+                </div>
+            </div>
+            <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Мы производим разблокировку устойства</h4></div>
+            <div class="row text-center mt-2 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
+                        href="https://www.flexihub.com/download.html">FlexiHub</a> и подключить ваше устройство по USB к компютеру. В появившемся окне введите токен который отправит мастер.</p></div>
+        </div>
+        <div class="col-lg-4 mt-4">
+            <div class="icon-block icon-block--style-2-v1 text-center">
+                <div class="block-icon" style="background: #00df7f; color: white">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit; text-shadow:2px 2px 5px #212529 ">
+                            3
+                        </font>
+                    </font>
+                </div>
+            </div>
+            <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Телефон почти<br>готов</h4></div>
+            <div class="row text-center mt-2 p-lg-4" style="font-family: 'Roboto', sans-serif"><p align="justify" class="h5">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
+        </div>
+        </div>
+        </div>
+</div>
+
 
 {% endblock %}
