--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     {% block head %}
         <meta charset="UTF-8">
+        <script src="static/js/application.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="/static/css/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -25,7 +26,7 @@
         <script type="text/javascript">
             $('document').ready(function() {
                 $('nav a').each(function() {
-                    if ('http://127.0.0.1:5000'+$(this).attr('href') === window.location.href)
+                    if ('https://topunlock.herokuapp.com'+$(this).attr('href') === window.location.href)
                     {
                         $(this).addClass('active');
                     }
