--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,14 @@
         75%{background:url('/static/images/s10.jpg')center no-repeat; background-size:cover;}
         100%{background:url('/static/images/s21.jpg')center no-repeat; background-size:cover;}
    }
-    .repeat_bg{
+   @media (min-width: 992px){
+       .repeat_bg{
         animation-name: animation-bg;
         animation-duration:20s;
         animation-direction: normal;
         animation-iteration-count: infinite;
     }
+   }
     .repeat_bg2{
         animation-name: animation-bg;
         animation-duration:1s;
@@ -60,8 +62,8 @@
     </style>
 
     <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom:100px">
-        <h2 class="col-lg-5 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
-        <div class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto">
+        <h2 class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
+        <div class="col-lg-5 col-xl-4 col-sm-9 col-10 col-md-6 mx-auto">
             <h3 class="mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</h3>
             <a href="#" class="animate btn btn-success btn-lg my-2 mx-1 px-4 gap-3" style="background: #00df7f; text-shadow:2px 2px 7px #949494; border: none">Разблокировать</a>
             <a href="#"  class="animate btn btn-outline-secondary my-2 mx-1 btn-lg px-4">Поддержка</a>
@@ -69,39 +71,9 @@
         </div>
     </div>
 
-    <div class="mx-3 my-3 row" style="display: none">
-    <div class="col-lg-6 col-12" style="border-radius: 10px; border: #b9b9b9 3px solid">
-        <h5 class="my-4  mx-2">Как это работает?</h5>
-        <div class="mt-3">
-            <div class="d-flex">
-                <p class="m-2">
-                    <strong>1</strong>
-                </p>
-                <p class="p-0 m-2">Клиент регистрируется, оставляет заявку на сайте.<br>В случае необходимости мы уточняем детали по заказу.</p>
-            </div>
-             <div class="d-flex">
-                <p class="m-2">
-                    <strong>2</strong>
-                </p>
-                <p class="p-0 m-2">Вам понадобится устанавить на свой компьютер программу <a href="https://www.flexihub.com/download.html">FlexiHub</a><br>с оффициального сайта.</p>
-            </div>
-             <div class="d-flex">
-                <p class="m-2">
-                    <strong>3</strong>
-                </p>
-                <p class="p-0 m-2">Далее понадобися подключить телефон к компьютеру и <br>в скаченой программе ввести спец.код.</p>
-            </div>
-            <div class="d-flex">
-                <p class="m-2">
-                    <strong>4</strong>
-                </p>
-                <p class="p-0 m-2 my-3">Теперь же остается только дождаться когда мастер закончит работу<br>и уведомит о ее завершении.</p>
-            </div>
-        </div>
-    </div>
-    </div>
-
-<div class="container mt-5 mx-auto">
+<div class="container mt-4 mx-auto">
+        <div class=" text-center" style="font-family:'Open Sans', sans-serif;"><h2>Безопасная и гарантированная разблокировка SAMSUNG за 3 простых шага в нашем сервисе TopUnlock</h2></div>
+        <div class=" text-center mt-3" style="font-family:'Source Sans Pro', sans-serif;"><h4>Быстрая и простая удаленная разблокировка телефона без аннулирования гарантии:</h4></div>
         <div>
         <div class="row mt-3">
         <div class="col-lg-4 mt-4">
@@ -115,7 +87,7 @@
                 </div>
             </div>
             <div class="row text-center" style="font-family:'Open Sans', sans-serif;"><h4>Предоставьте информацию о вашем устройстве</h4></div>
-            <div class="row text-center mt-2 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">Заполните форму заявки на сайте.
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">Заполните форму заявки на сайте.
                 Выберите модель телефона который хотите разблокировать. Установите с официального сайта утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> для компютера. А так же в соответсвии с выбранной моделью произведите оплату услуги.</p></div>
         </div>
@@ -130,7 +102,7 @@
                 </div>
             </div>
             <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Мы производим разблокировку устойства</h4></div>
-            <div class="row text-center mt-2 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> и подключить ваше устройство по USB к компютеру. В появившемся окне введите токен который отправит мастер.</p></div>
         </div>
         <div class="col-lg-4 mt-4">
@@ -144,7 +116,7 @@
                 </div>
             </div>
             <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Телефон почти<br>готов</h4></div>
-            <div class="row text-center mt-2 p-lg-4" style="font-family: 'Roboto', sans-serif"><p align="justify" class="h5">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family: 'Roboto', sans-serif"><p align="justify" class="h5">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
         </div>
         </div>
         </div>
