--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -3,7 +3,7 @@
 {% block page_body %}
     {% block body %}
         <div class="row-fluid">
-            <div class="col-sm-3 mx-auto my-5">
+            <div class="col-sm-5 col-lg-3 col-xl-3 col-md-4 col-8 mx-auto my-5">
                 <a href="/" class="" style=" display: flex;
     align-items: center;
     justify-content: center;">
