--- a/templates/userprofile/userinfo.html
+++ b/templates/userprofile/userinfo.html
@@ -63,6 +63,10 @@
 
         </form>
     </div>
+    <div class="col" style="background: cadetblue;">
+        <div>
+        </div>
+    </div>
     </div>
 
     <div class="row">
@@ -108,7 +112,7 @@
       </div>
       <div class="modal-body">
 
-          <form action="" method="post"">
+          <form action="" method="post">
           <div class="mb-2" style="border-bottom: #b9b9b9 solid 2px "><label class="mx-2 my-4" for="name">Введите имя</label><input class="py-1" style="border-radius: 6px; border: #b9b9b9 solid; outline-color: darkgray"  id="name" type="text" name="name" placeholder="Имя:"></div>
          <div class="my-3 col-sm-5 col-8 offset-6 offset-sm-7">
              <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Отмена</button>
