--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,4 +39,13 @@
 .active{
     color: #00df7f !important;
     background:none !important;
+    border-bottom: #00df7f 2px solid;
+}
+
+.title_after::after{
+    content: "";
+    display: block;
+    margin: 30px auto 0;
+    width: 40px;
+    border-top: 2px solid #444;
 }
