--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,11 @@
         animation-iteration-count: infinite;
     }
    }
+   @media (max-width: 991px){
+       .repeat_bg{
+
+    }
+   }
     .repeat_bg2{
         animation-name: animation-bg;
         animation-duration:1s;
@@ -62,20 +67,19 @@
     </style>
 
     <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom:100px">
-        <h2 class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold" style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
+        <h2 class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold title_after " style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
         <div class="col-lg-5 col-xl-4 col-sm-9 col-10 col-md-6 mx-auto">
-            <h3 class="mb-4" style="font-family:'Source Sans Pro', sans-serif;">Дистанционное удаление учетной записи Google или FRP(защиты от сброса настроек), связанных с вашим телефоном Samsung.</h3>
-            <a href="#" class="animate btn btn-success btn-lg my-2 mx-1 px-4 gap-3" style="background: #00df7f; text-shadow:2px 2px 7px #949494; border: none">Разблокировать</a>
-            <a href="#"  class="animate btn btn-outline-secondary my-2 mx-1 btn-lg px-4">Поддержка</a>
+            <h3 class="mt-4 mb-4" style="font-family:'Source Sans Pro', sans-serif;">TopUnlock - это специальный веб-сайт, который обеспечивает быструю официальную разблокировку устройств всему миру. У вас есть устройство, которое нужно разблокировать? Мы здесь, чтобы помочь!</h3>
+            <a href="#" class="animate btn btn-success btn-lg my-2 mx-2 px-4 gap-3" style="background: #00df7f; text-shadow:2px 2px 7px #949494; border: none">Разблокировать</a>
+            <a href="#"  class="animate btn btn-outline-secondary my-2 mx-1 btn-lg gap-3 px-4">Поддержка</a>
              <div class="repeat_bg2 hidden"></div>
         </div>
     </div>
-
 <div class="container mt-4 mx-auto">
-        <div class=" text-center" style="font-family:'Open Sans', sans-serif;"><h2>Безопасная и гарантированная разблокировка SAMSUNG за 3 простых шага в нашем сервисе TopUnlock</h2></div>
-        <div class=" text-center mt-3" style="font-family:'Source Sans Pro', sans-serif;"><h4>Быстрая и простая удаленная разблокировка телефона без аннулирования гарантии:</h4></div>
+        <div class="title_after text-center" style="font-family:'Open Sans', sans-serif;"><h2>Безопасная и гарантированная разблокировка SAMSUNG за 3 простых шага в нашем сервисе TopUnlock</h2></div>
+        <div class="text-center mt-3" style="font-family:'Source Sans Pro', sans-serif;"><h3>Быстрая и простая удаленная разблокировка телефона без аннулирования гарантии:</h3></div>
         <div>
-        <div class="row mt-3">
+        <div class="row mt-5">
         <div class="col-lg-4 mt-4">
             <div class="icon-block icon-block--style-2-v1 text-center">
                 <div class="block-icon" style="background: #00df7f; color: white">
@@ -87,7 +91,7 @@
                 </div>
             </div>
             <div class="row text-center" style="font-family:'Open Sans', sans-serif;"><h4>Предоставьте информацию о вашем устройстве</h4></div>
-            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">Заполните форму заявки на сайте.
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">Заполните форму заявки на сайте.
                 Выберите модель телефона который хотите разблокировать. Установите с официального сайта утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> для компютера. А так же в соответсвии с выбранной моделью произведите оплату услуги.</p></div>
         </div>
@@ -101,8 +105,8 @@
                     </font>
                 </div>
             </div>
-            <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Мы производим разблокировку устойства</h4></div>
-            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Roboto', sans-serif"><p align="justify" class="h5">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
+            <div class="row text-center " style="font-family:'Open Sans', sans-serif"><h4>Мы производим разблокировку устойства</h4></div>
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> и подключить ваше устройство по USB к компютеру. В появившемся окне введите токен который отправит мастер.</p></div>
         </div>
         <div class="col-lg-4 mt-4">
@@ -116,7 +120,7 @@
                 </div>
             </div>
             <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Телефон почти<br>готов</h4></div>
-            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family: 'Roboto', sans-serif"><p align="justify" class="h5">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
+            <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
         </div>
         </div>
         </div>
