--- a/templates/security/_macros.html
+++ b/templates/security/_macros.html
@@ -11,7 +11,7 @@
 {% endmacro %}
 
 {% macro render_field_with_errors(field) %}
-    <div class="form-group"> {{ field(class_='form-control', **kwargs)|safe }}
+        {{ field(class_='form-control', **kwargs)|safe }}
     {% if field.errors %}
     <ul>
         {% for error in field.errors %}
@@ -19,7 +19,6 @@
         {% endfor %}
     </ul>
     {% endif %}
-    </div>
 
 {% endmacro %}
 
