--- a/templates/userprofile/admin/item_admin.html
+++ b/templates/userprofile/admin/item_admin.html
@@ -1,5 +1,36 @@
 {% extends 'userprofile/admin.html' %}
 
 {% block admin_body %}
-    <p>Тут будет база данных товаров</p>
+<div class="row">
+    <form action="{{ url_for('add_item') }}" class="col-auto m-3 p-4" style="border: 2px solid #d5d5d5; border-radius: 15px" method="post">
+        <h4 class="m-2 mb-4">Добавить товар</h4>
+        <input type="text" class="form-control my-2" name="name" placeholder="Имя" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="number" class="form-control" name="price" placeholder="Цена" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <textarea class="form-control my-2" name="intro" aria-label="With textarea" rows="5" placeholder="Описание"></textarea>
+        <button type="submit" class="btn btn-success">Добавить</button>
+    </form>
+    <div class="col m-3 col-6-lg mx-3 p-3" style="border-radius: 15px;border: 2px solid #d5d5d5; ">
+        <table class="table table-hover ">
+            <thead>
+            <tr>
+                <th scope="col">id</th>
+                <th scope="col">Имя</th>
+                <th scope="col">Описание</th>
+                <th scope="col">Цена</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for el in data %}
+                <tr>
+                    <th scope="row">{{ el.id }}</th>
+                    <td>{{ el.name }}</td>
+                    <td>{{ el.intro }}</td>
+                    <td>{{ el.price }}</td>
+                    <td><a class="btn btn-danger" href="/delete/{{ el.id }}">Удалить</a></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
