added purchase options and purchase history

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end shadow-lg col-3" style="border-radius: 15px" aria-labelledby="navbarDropdown">
-                                <li class="p-2"><a style="border-radius: 10px" class="dropdown-item h5" href="{{ url_for('userinfo') }}">Профиль</a></li>
+                                <li class="p-2"><a style="border-radius: 10px" class="dropdown-item h5" href="{{ url_for('user_info') }}">Профиль</a></li>
                                 <li><a class="dropdown-divider h5"></li>
                                 <li class="p-2" ><a style="border-radius: 10px" class="dropdown-item h5" href="{{ url_for('security.logout') }}">Выйти</a></li>
                             </ul>
